Fix all overflow overlap

--- a/public/application.css
+++ b/public/application.css
@@ -2,7 +2,7 @@
 #root {
     height: 605px;
     width: 355px;
-    overflow-y: scroll;
+    overflow-y: auto;
     border-radius: 5px;
     border: 1px solid black;
     position: absolute;
@@ -10,6 +10,7 @@
     left: 39px;
     z-index: 20;
     background: white;
+    overflow-x: hidden;
 }
 
 html {
@@ -105,7 +106,7 @@ body > img {
 }
 
 footer {
-    margin-top: 10.5%;
+    margin-top: 13%;
     display: flex;
     align-self: flex-end;
 }
@@ -125,7 +126,6 @@ footer > img {
 .mentor-index {
     margin-top: 10px;
     position: relative;
-    overflow-y: auto; 
 }
 
 .mentor-index .title {
@@ -358,7 +358,7 @@ footer > img {
     list-style: none;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
+    overflow-x: hidden;
     width: 1000px;
     padding-left: 30px;
 }
@@ -386,7 +386,6 @@ footer > img {
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
-    /* overflow-y: scroll; */
 }
 
 .header-bar {
